# hrmpy

./: .gitignore  README.md  build.sh  pyproject.toml  tutorial.ipynb
src/hrmpy/: __init__.py  main.py
src/hrmpython/: __init__.py
