[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hrmpython"
version = "0.1"
authors = [
    { name = "Satrio Wibowo", email = "satrio.biology@yahoo.com" }
]
readme = "README.md"
requires-python = ">=3.8"
description = "A simple package to handle HRM data in python"
keywords = []
dependencies = []